extra padding from 1050px to 1100px, inc. preview tray margin calc (bug 1132898)

--- a/src/media/css/app-list-filters.styl
+++ b/src/media/css/app-list-filters.styl
@@ -94,7 +94,7 @@ App listing filters.
         bottom: 0;
         border-bottom: 2px solid $filters-border;
         padding: 0 0 30px;
-        width: $desktop-content;
+        max-width: $desktop-content;
     }
     .app-list-filters-sort {
         margin-right: 30px;
