--- a/src/media/css/previews-tray.styl
+++ b/src/media/css/previews-tray.styl
@@ -160,6 +160,8 @@ $desktop-tray-height = 540px;
     }
     [data-page-type~="detail"] .previews-tray {
         height: $desktop-tray-height + $bar-height;
+        margin: 0 auto;
+        margin-left: 0;
         position: relative;
 
         .previews-content {
