--- a/src/media/css/site.styl
+++ b/src/media/css/site.styl
@@ -300,4 +300,17 @@ a:active {
             padding: 25px;
         }
     }
+    // Add padding for 1050px to 1100px.
+    section.main > div {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
+@media (min-width: 1100px) {
+    // Remove the padding that we applied for 1050px to 1100px.
+    section.main > div {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
